--- a/src/components/pages/Topics.css
+++ b/src/components/pages/Topics.css
@@ -1,16 +1,3 @@
-.container {
-  /* border: 1px solid red; */
-}
-
-.current-topics {
-  /* border: 1px solid blue; */
-  /* border-right: 1px solid gray; */
-}
-
-.submit-topic {
-  /* border: 1px solid green; */
-}
-
 .column-title {
   border-bottom: 1px solid gray;
   margin-top: 50px;
@@ -19,7 +6,30 @@
 }
 
 .submit-wrapper {
-  /* border: 1px solid red; */
   padding: 15px;
   text-align: center;
+}
+
+.form-container {
+  /* border: 1px solid red; */
+  position: relative;
+  height: 80vh;
+}
+
+.topic-content {
+  border-right: 1px solid lightgray;
+  padding-right: 25px;
+  height: 75vh;
+  overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+.form {
+  /* border: 1px solid blue; */
+  /* margin-top: 30%; */
+  /* border-left: 1px solid lightgray; */
+  /* padding-left: 20px; */
 }
