--- a/src/components/pages/Topics.css
+++ b/src/components/pages/Topics.css
@@ -1,5 +1,5 @@
 .column-title {
-  border-bottom: 1px solid gray;
+  border-bottom: 2px solid rgb(11, 26, 156);
   margin-top: 50px;
   padding-bottom: 10px;
   margin-bottom: 20px;
