5 files modified, 4 added, 1 deleted

--- a/src/components/pages/Topics.css
+++ b/src/components/pages/Topics.css
@@ -1,5 +1,5 @@
 .column-title {
-  border-bottom: 2px solid rgb(11, 26, 156);
+  border-bottom: 5px solid lightblue;
   margin-top: 50px;
   padding-bottom: 10px;
   margin-bottom: 20px;
