--- a/src/components/pages/Topics.css
+++ b/src/components/pages/Topics.css
@@ -1,6 +1,6 @@
 .column-title {
   border-bottom: 5px solid lightblue;
-  margin-top: 50px;
+  /* margin-top: 50px; */
   padding-bottom: 10px;
   margin-bottom: 20px;
 }
