--- a/src/components/pages/Topics.css
+++ b/src/components/pages/Topics.css
@@ -28,8 +28,8 @@
 }
 
 .form {
-  /* border: 1px solid blue; */
-  /* margin-top: 30%; */
-  /* border-left: 1px solid lightgray; */
-  /* padding-left: 20px; */
+  /* border: 1px solid blue;
+  margin-top: 30%;
+  border-left: 1px solid lightgray;
+  padding-left: 20px; */
 }
